force-app/main/default/objects/Document_Masters__c/Document_Masters__c.object-meta.xml
<CustomObject>
    <label>Document Master</label>
    <nameField>
        <label>Document Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>