force-app/main/default/objects/Document_Masters__c/fields/Document_For__c.field-meta.xml
<CustomField>
    <fullName>Document_For__c</fullName>
    <label>Document For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>APA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>