force-app/main/default/objects/Document_Masters__c/fields/Document_Masters_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Masters_Id__c</fullName>
    <displayFormat>DM-{00000}</displayFormat>
    <label>Document Masters Id</label>
    <type>AutoNumber</type>
</CustomField>