force-app/main/default/objects/Document_Masters__c/fields/Scheme_Items__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Items</label>
    <referenceTo>Scheme_Items__c</referenceTo>
    <relationshipLabel>Document Masters</relationshipLabel>
    <relationshipName>Document_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>