force-app/main/default/objects/Document_Masters__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Masters_Id__c</columns>
    <columns>Scheme_Items__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>